<resources>
    <string name="profile_title_my_timeline">My Timeline</string>
    <string name="profile_title_prof_photos">Profile photos</string>
    <string name="profile_title_cover_photos">Cover photos</string>
    <string name="available_identities">Identità Disponibili</string>
    <string name="interest_claim_pending">Richiesta Claim IN ATTESA</string>
    <string name="dialog_claim_success_title">Rechiesta Claim Inviata</string>
    <string name="dialog_claim_success_message">Ti contatteremo il prima possibile.</string>
    <string name="dialog_add_remove_2_step_title_a">Aggiunge un contatto per la Verifica 2-Step</string>
    <string name="dialog_add_remove_2_step_message_a">Confermi di voler che %s diventi uno dei tuoi contatti per la Verifica 2-Step?</string>
    <string name="interest_action_claim">Claim page</string>
    <string name="interest_claim_title_body">To Claim this page you can send documentation for %s.</string>
    <string name="interest_claim_title_body_phone">To Claim this page, please enter a publicly listed phone number of %s and select your preferred language.</string>
    <string name="interest_claim_toolbar">Claim %s</string>
    <string name="error_interest_already_claimed">This Interest has already been claimed</string>
    <string name="interest_claimed_success">Interest claimed successfully</string>
    <string name="type_interest_page">Interest page</string>
    <string name="title_create_wish">Create Wish</string>
    <string name="wish_preview_save">Save Wish</string>
    <string name="cwish_trigger">Trigger</string>
    <string name="cwish_repeat">Repeat</string>
    <string name="cwish_to">To</string>
    <string name="cwish_action">Action</string>
    <string name="wishes_action_create">Tap per creare un Wish</string>
    <string name="wishes_action_saved">Your saved Wishes</string>
    <string name="wishes_btn_invite">Invita più persone</string>
    <string name="wishes_btn_add_post">Condividi nuove storie</string>
    <string name="wishes_btn_follow_interests">Segui più Interessi</string>
    <string name="wishes_btn_complete_profile">Complete your Profile</string>
    <string name="wishes_complete_actions">Azioni da completare</string>
    <string name="wishes_complete_action">Azione da completare</string>
    <string name="wishes_complete_actions_2">Ottieni più Cuori</string>
    <string name="wishes_complete_actions_pref">Il tuo Interesse Preferito è quello che riceverà i Cuori per ogni Wish che creerai </string>
    <string name="wishes_complete_actions_legacy">Il tuo Legacy Contact è colui che scegli per notificare Highlanders della tua dipartita</string>
    <string name="wishes_inactive_hearts_number">You need %d more Hearts to create a new Wish</string>
    <string name="wishes_inactive_hearts">You need at least %s available Hearts to create a new Wish</string>
    <string name="wishes_inactive_legacy">You need to choose a Legacy Contact to create a new Wish</string>
    <string name="wishes_inactive_legacypending">You need acceptance from your Legacy Contact to create a new Wish</string>
    <string name="wishes_inactive_legacypending_btn">Legacy Contact Pending</string>
    <string name="wishes_inactive_pref">You need to set a Preferred Interest to create a new Wish</string>
    <string name="wishes_inactive_legacy_pref">Devi scegliere un Legacy Contact e impostare un Interesse Preferito per creare un nuovo Wish</string>
    <string name="wishes_inactive_legacypending_pref">Your Legacy Contact request is still pending and you need to set a Preferred Interest to create a new Wish</string>
    <string name="wishes_btn_legacy_contact">Scegli il tuo Legacy Contact</string>
    <string name="wishes_btn_preferred_interest">Imposta Interesse Preferito</string>
    <string name="wishes_name_hint">Name your Wish</string>
    <string name="action_to">A</string>
    <string name="action_email_subject">Oggetto</string>
    <string name="action_email_message">Messaggio</string>
    <string name="action_email_attach">Aggiungi allegati (5 MB max)</string>
    <string name="action_email_add_picture">Aggiungi foto profilo alla Email</string>
    <string name="exit">Exit</string>
    <string name="processing_file">Processamento file in corso…</string>
    <string name="error_processing_file">Non abbiamo potuto processare questo file</string>
    <string name="error_claim_files_allowed_extensions">I formati supportati sono .doc, .docx, .pdf, .jpeg, .jpg, .png</string>
    <string name="error_chat_files_allowed_extensions">I formati supportati sono .pdf, .doc, .docx, .xls, .xlsx, .ppt, .pptx</string>
    <string name="action_verify">Verify</string>
    <string name="wish_verify_code_title">Verifica obbligatoria</string>
    <string name="wish_verification_success">Numero di telefono verificato</string>
    <string name="wish_verification_failed">Codice di verifica errato</string>
    <string name="error_recording_audio">Non abbiamo potuto registrare il file audio. Riprova.</string>
    <string name="wish_recip_all">Tutti i Membri del Network</string>
    <string name="action_request_sent">Richiesta inviata</string>
    <string name="media_upload_ready">Il tuo file %s è pronto per l\'upload</string>
    <string name="wish_no_repeat">No Repeat</string>
    <string name="wish_repetitions_block_1">Repeat Wish </string>
    <string name="wish_repetitions_infinite">Infinite times</string>
    <string name="dialog_exit_wish_title">Exit Wish creation</string>
    <string name="dialog_exit_wish_message">By exiting now, all the changes will be lost.\nAre you sure?</string>
    <string name="wish_set_repetitions">Set Wish Repetitions</string>
    <string name="wish_shuffle_posts">Shuffle stories</string>
    <string name="wish_title_trigger">Wish Triggered by:</string>
    <string name="wish_pick_specific_date">Pick a specific date</string>
    <string name="wish_pick_specific_time">Pick a specific time</string>
    <string name="error_wish_no_selection">Without a valid selection you cannot proceed to next step</string>
    <string name="wish_add_new_event">Add a new Life Event</string>
    <string name="wish_add_new_event_btn">Add event</string>
    <string name="wish_filter_containing">Containing</string>
    <string name="wish_filter_add_text">Add text</string>
    <string name="item_wish_filter_add_hint">Your text here</string>
    <string name="wish_picker_year">Starting from year:</string>
    <string name="wish_picker_time">at:</string>
    <string name="no_result_wish">Sorry, no result to show</string>
    <string name="no_result_wish_base_list">We experienced a little problem…\nPlease swipe to refresh the screen</string>
    <string name="wish_saving_email">Saving e-mail…</string>
    <string name="dialog_wish_error_recipient_title">E-mail error!</string>
    <string name="dialog_wish_error_recipient_message">The recipient is either missing or invalid.\nPlease enter a correct email address for the recipient.</string>
    <string name="dialog_wish_error_empty_fields_title">E-mail warning!</string>
    <string name="dialog_wish_error_empty_fields_message">Either the subject or the message or both is missing.\n\nAre you sure you want to save the e-mail?</string>
    <string name="dialog_wish_error_empty_fields_positive">Save anyway</string>
    <string name="dialog_wish_error_attach_title">Attachment error!</string>
    <string name="error_wish_attach">Couldn\'t attach the file: the total max size allowed is 5 MB</string>
    <string name="wish_verify_code">Here\'s your verification code:</string>
    <string name="wish_verify_code_message">We need to verify your phone number in order to make our systems capable to call your recipient using your caller ID.\nYou will receive a phone call from us and you will need to listen to the code, then you\’ll need to add this code to the following screen.</string>
    <string name="wish_verify_code_message_2">We need to verify your phone number in order to make our systems capable to call your recipient using your caller ID.\nYou will receive a phone call from us and you will be asked to digit in your phone the code you are about to see in the next screen.</string>
    <string name="error_phone_validation">Something went wrong during your phone number validation.\nIf you haven\'t received any calls yet, please wait a few more moments</string>
    <string name="error_phone_validation_2">Something went wrong during your phone number validation.\nIf you haven\'t received any calls yet, please wait a few more moments. Otherwise, please, try again later.</string>
    <string name="error_phone_validation_no_phone">It seems that you haven\'t saved your phone number yet. In order to do so, go to Settings &#8594; Account Settings and enter your phone number.</string>
    <string name="wish_recip_specific">Specific Inner Circle Member(s)</string>
    <string name="wish_toolbar_preview">Your Wish Summary</string>
    <string name="toolbar_legacy_title">Legacy Contact</string>
    <string name="dialog_legacy_title">Choose Legacy Contact</string>
    <string name="dialog_legacy_message">By tapping OK, %s will be asked to become your Legacy Contact.\n\nDo you confirm?</string>
    <string name="no_result_save_wishes">You don\'t have any saved wishes yet</string>
    <string name="error_wish_call_one_selection">Only one story can be selected for this kind of Wish</string>
    <string name="ok" translatable="false">OK</string>
    <string name="big_dash" translatable="false">&#8212;</string>
    <string name="prompt_email">Indirizzo email</string>
    <string name="dialog_password_recovery_title">Recupero password</string>
    <string name="pwd_recovery_send_request">Invia richiesta</string>
    <string name="error_generic_list">Spiacenti! La lista potrebbe non essere aggiornata</string>
    <string name="cancel">Annulla</string>
    <string name="dialog_flag_report_hint">Le tue ragioni vanno qui</string>
    <string name="my_interest_claim">+ Segui un nuovo Interesse</string>
    <string name="my_interests_title_rv">Tutti gli Interessi (%d)</string>
    <string name="no_interest">Non segui nessun Interesse</string>
    <string name="claim_bottom_sheet_title">Carica un file</string>
    <string name="claim_bottom_sheet_scan">Scansiona un documento</string>
    <string name="claim_bottom_sheet_choose">Scegli dalla Library</string>
    <string name="dialog_password_change_title">Cambia password</string>
    <string name="prompt_pwd_current">Password corrente</string>
    <string name="prompt_pwd_new">Nuova password</string>
    <string name="prompt_pwd_new_confirm">Conferma nuova password</string>
    <string name="action_save">Salva</string>
    <string name="dialog_block_unblock_title_b">Blocca utente</string>
    <string name="dialog_block_unblock_message_b">Confermi di voler bloccare %s?</string>
    <string name="action_delete_account">Cancella il Mio Account</string>
    <string name="delete_account_et_txt">Per favore, dicci perché desideri eliminare il tuo account</string>
    <string name="delete_account_sure">Sei sicuro di voler eliminare il tuo account?</string>
    <string name="delete_account_hearts">Per favore, sappi che eliminando il tuo account perderai tutte le Stelle Luiss che hai accumulato fino ad adesso</string>
    <string name="error_report_empty_message">Il tuo messaggio non può essere vuoto</string>
    <string name="settings_redeem_hearts">Riscatta Stelle</string>
    <string name="settings_redeem_enter">Inserisci ammontare</string>
    <string name="settings_redeem_available_hearts">%s disponibili</string>
    <string name="settings_redeem_select_mkt">Seleziona Marketplace</string>
    <string name="action_redeem">Riscatta</string>
    <string name="redeem_amount_hint">Stelle da riscattare</string>
    <string name="error_redeem_enough_cash">Il minimo valore riscattabile è $50</string>
    <string name="action_retry">Riprova</string>
</resources>