<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2018. Highlanders LLC - All Rights Reserved
  Unauthorized copying of this file, via any medium is strictly prohibited.
  Proprietary and confidential.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_margin">

    <TextView
        style="@style/DialogTitle"
        android:text="@string/dialog_password_change_title"/>

    <include
        android:id="@+id/settings_pwd_current"
        layout="@layout/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_pwd_current"/>

    <include
        android:id="@+id/settings_pwd_new"
        layout="@layout/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_pwd_new"/>

    <include
        android:id="@+id/settings_pwd_new_confirm"
        layout="@layout/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_pwd_new_confirm"/>

    <Button
        android:id="@+id/save_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:onClick="onClick"
        style="@style/LoginButtonStyle"
        android:text="@string/action_save"/>


</LinearLayout>