<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2017. Highlanders LLC - All Rights Reserved
  Unauthorized copying of this file, via any medium is strictly prohibited.
  Proprietary and confidential.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/Regular20"
        android:text="@string/dialog_password_recovery_title"/>

    <include layout="@layout/custom_edit_text"
             android:id="@+id/recovery_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/prompt_email"/>

    <Button
        android:id="@+id/send_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        style="@style/LoginButtonStyle"
        android:text="@string/pwd_recovery_send_request"
        android:onClick="onClick"/>


</LinearLayout>