<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2018. Highlanders LLC - All Rights Reserved
  Unauthorized copying of this file, via any medium is strictly prohibited.
  Proprietary and confidential.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/fixed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_margin_lg"
        android:paddingEnd="@dimen/activity_margin_lg">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            style="@style/Regular22"
            android:text="@string/settings_redeem_hearts"
            android:textColor="@color/colorAccent" />

        <RelativeLayout
            android:id="@+id/layout_enter_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/enter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/Regular18"
                android:text="@string/settings_redeem_enter"
                android:textColor="@color/black_70" />

            <LinearLayout
                android:id="@+id/count_heart_available_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/enter_text"
                android:layout_marginStart="@dimen/activity_margin_lg"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_alignBottom="@id/enter_text">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@drawable/ic_remaining_hearts_orange"/>

                <TextView
                    android:id="@+id/count_heart_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    style="@style/SemiBold14"
                    android:text="@string/settings_redeem_available_hearts"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enter_text"
                android:orientation="horizontal"
                android:gravity="end">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_full_heart_orange"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/edit_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_margin_lg"
                    android:hint="@string/redeem_amount_hint"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:padding="12dp"
                    style="@style/Regular18"
                    android:textColorHint="@color/black_38"
                    android:textCursorDrawable="@drawable/custom_cursor_drawable"
                    android:background="@drawable/background_rounded_4_gray"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_layout"
                android:layout_marginTop="2dp"
                android:gravity="end"
                style="@style/Regular14"
                android:textColor="@color/black_70"
                android:text="@string/error_redeem_enough_cash"
                android:visibility="visible"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            style="@style/Regular18"
            android:text="@string/settings_redeem_select_mkt"
            android:textColor="@color/black_70" />
    </LinearLayout>

    <TextView
        android:id="@+id/redeem_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin_lg"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        style="@style/Bold20"
        android:text="@string/action_redeem"
        android:textColor="@color/state_list_redeem_btn"
        android:background="@drawable/selector_redeem_btn"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fixed_layout"
        android:layout_above="@id/redeem_btn">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ScrollbarStyle"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/no_result"
        android:layout_below="@id/fixed_layout"
        style="@style/NoResultStyle"
        android:text="@string/error_generic_list"
        android:visibility="visible"/>

</RelativeLayout>