<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2017. Highlanders LLC - All Rights Reserved
  Unauthorized copying of this file, via any medium is strictly prohibited.
  Proprietary and confidential.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <include layout="@layout/luiss_toolbar_btp"
             android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/follow_unfollow_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical"
        style="@style/Regular18"
        android:text="@string/my_interest_claim"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:background="@color/colorAccent"/>

    <include layout="@layout/profile_search_box"
             android:id="@+id/search_box"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/all_interests_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="20dp"
            style="@style/SemiBold20"
            android:text="@string/my_interests_title_rv"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/all_interests_rv"
                    style="@style/ScrollbarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/no_result"
                    style="@style/NoResultStyle"
                    android:text="@string/no_interest"/>
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</LinearLayout>